--- a/literatur/literatur.bib
+++ b/literatur/literatur.bib
@@ -101,6 +101,22 @@
   file = {/Users/A200017936/Zotero/storage/BM7U7267/Fareez et al. - 2020 - POPULAR PYTHON LIBRARIES AND THEIR APPLICATION DOMAINS.pdf}
 }
 
+@inproceedings{floydSystematicLookPrototyping1984,
+  title = {A {{Systematic Look}} at {{Prototyping}}},
+  booktitle = {Approaches to {{Prototyping}}},
+  author = {Floyd, Christiane},
+  editor = {Budde, Reinhard and Kuhlenkamp, Karin and Mathiassen, Lars and Züllighoven, Heinz},
+  date = {1984},
+  pages = {1--18},
+  publisher = {Springer},
+  location = {Berlin, Heidelberg},
+  doi = {10.1007/978-3-642-69796-8_1},
+  abstract = {This paper originates from a series of discussions between programme committee members during the preparation of the Working Conference on Prototyping. While trying to define the topic of the conference, it became clear to us that we each held our own viewpoint on the subject. Views differed as to the specific use of terminology as well as the application-oriented emphasis on particular strategies, and so did our judgements about the potential usefulness of prototyping. The views did not, however, seem contradictory but rather complementary.},
+  isbn = {978-3-642-69796-8},
+  langid = {english},
+  file = {/Users/A200017936/Zotero/storage/BESRNHM3/Floyd - 1984 - A Systematic Look at Prototyping.pdf}
+}
+
 @article{joshiOverviewPythonLibraries,
   title = {An {{Overview}} of {{Python Libraries}} for {{Data Science}} | {{Journal}} of {{Engineering Technology}} and {{Applied Physics}}},
   author = {Joshi, Ankush and Tiwari, Haripriya},
