Deleted example todo

--- a/thesis_main.tex
+++ b/thesis_main.tex
@@ -68,7 +68,7 @@
 \usepackage[hang,multiple]{footmisc}
 \setlength{\footnotemargin}{1em}
 
-% todo Aufgaben als Kommentare verfassen für verschiedene Editoren
+% to_do Aufgaben als Kommentare verfassen für verschiedene Editoren
 \usepackage{todonotes}
 
 % Verhindert, dass nur eine Zeile auf der nächsten Seite steht
