Fixed Bug of acronyms not showing at all

--- a/kapitel/einleitung/einleitung.tex
+++ b/kapitel/einleitung/einleitung.tex
@@ -22,7 +22,7 @@ Abbildung.
 The selection of a robust and integrated technical stack is pivotal for the successful implementation of sophisticated
 software solutions, particularly when developing a chatbot designed to understand and fulfill complex customer needs.
 The project presented in this bachelor’s thesis involves the creation of a chatbot that leverages Natural Language
-Processing (NLP) to interpret customer inquiries and match them with relevant items from a supplier catalog.
+Processing (\ac{NLP}) to interpret customer inquiries and match them with relevant items from a supplier catalog.
 To achieve
 this, the backend relies on Python and Haystack, while the frontend utilizes Vue, and the deployment is
 managed through containerization and orchestration technologies like Docker and Kubernetes.
@@ -36,7 +36,7 @@ various libraries and frameworks that facilitate rapid prototyping and the devel
 functionalities.\autocite[cf.][p. 12]{shrivastavaDesignImplementationChatbot}
 \autocite[cf.][pp. 240-241]{christensenPythonPipelineRapid2022} Its prominence in the fields of machine
 learning and data science makes it an ideal choice for implementing a chatbot that requires advanced Natural Language
-Understanding (NLU) capabilities.\autocite[cf.][p. 1]{lortiePythonModernData2022}\autocite[cf.][p. 85]{joshiOverviewPythonLibraries}
+Understanding (\ac{NLU}) capabilities.\autocite[cf.][p. 1]{lortiePythonModernData2022}\autocite[cf.][p. 85]{joshiOverviewPythonLibraries}
 Specifically, Python's compatibility with NLP frameworks like Haystack and many libraries ensures that
 the chatbot can parse user inputs and perform context-aware semantic searches.\autocite[cf.][p. 21]{fareezPOPULARPYTHONLIBRARIES2020}
 This capability is crucial for accurately interpreting customer needs and mapping them to appropriate products or services in the supplier catalog.
@@ -55,9 +55,9 @@ scenarios, as it allows the chatbot to comprehend the subtleties of customer que
 only contextually relevant but also demonstrate a high degree of language understanding
 \autocite[cf.][pp. 943-944]{syedQuestionAnsweringChatbot2021}.
 
-Moreover, Haystack’s modular architecture and extensible Application Programming Interfaces (APIs) offer a high degree
-of flexibility, facilitating seamless integration within the chatbot’s overall architecture. This ensures that the
-processes of searching and retrieving supplier catalog data are executed with optimal accuracy and efficiency.
+Moreover, Haystack’s modular architecture and extensible Application Programming Interfaces (\ac{API}s) offer a high
+degree of flexibility, facilitating seamless integration within the chatbot’s overall architecture. This ensures that
+the processes of searching and retrieving supplier catalog data are executed with optimal accuracy and efficiency.
 Consequently, Haystack’s inclusion in the technical stack is not merely contributory to the current system’s
 capabilities but also establishes a solid foundation for prospective advancements and refinements in the chatbot’s
 functional repertoire.
@@ -108,7 +108,7 @@ consistently across various environments.\autocite[cf.][p. 191]{openjaStudyingPr
 for a project like this, where different iterations of the prototype may need to be tested in different setups.
 Kubernetes, in turn, provides the orchestration needed to manage these containers, allowing for automated scaling and
 high availability.\autocite[cf.][pp. 2,7-8]{carrionKubernetesSchedulingTaxonomy2022} The use of Terraform as an
-infrastructure-as-code (IaC) tool ensures that cloud resources can be provisioned and managed efficiently, providing a
+infrastructure-as-code (\ac{IaC}) tool ensures that cloud resources can be provisioned and managed efficiently, providing a
 stable and reproducible deployment environment.\autocite[cf.][p. 24]{n.EvaluatingDevopsTools2023}
 
 \vspace{1cm}
