--- a/abkuerzungen/acronyms.tex
+++ b/abkuerzungen/acronyms.tex
@@ -1,9 +1,10 @@
 
 \section*{\langde{Abkürzungsverzeichnis}\langen{List of Abbreviations}}
 
-\begin{acronym}[WYSIWYG]\itemsep0pt %der Parameter in Klammern sollte die längste Abkürzung sein. Damit wird der Abstand zwischen Abkürzung und Übersetzung festgelegt
-  \acro{NLU}{Natural Language Understanding}
-  \acro{NLP}{Natural Language Processing}
+\begin{acronym}[MVP]\itemsep0pt %der Parameter in Klammern sollte die längste Abkürzung sein. Damit wird der Abstand zwischen Abkürzung und Übersetzung festgelegt
   \acro{API}{Application Programming Interface}
   \acro{IaC}{Infrastructure-as-Code}
+  \acro{MVP}{Minimum Viable Product}
+  \acro{NLU}{Natural Language Understanding}
+  \acro{NLP}{Natural Language Processing}
 \end{acronym}
