--- a/kapitel/kapitel_2/kapitel_2.tex
+++ b/kapitel/kapitel_2/kapitel_2.tex
@@ -76,11 +76,10 @@ testing specific design choices.
 
 Furthermore, the experimental approach is particularly well-suited for scenarios where a prototype is intended to serve
 as a preliminary proof of concept rather than a foundation for incremental development. This aligns perfectly with the
-anticipated lifecycle of the prototype in this project, which is expected to be discarded once the Minimum Viable
-Product (\ac{MVP}) phase begins. As the project moves towards the MVP stage, a fresh start will be made, incorporating
-only validated concepts and findings from the experimental prototype. Therefore, evolutionary prototyping is not
-applicable, as it is primarily designed for projects that involve iterative refinement and continuous evolution of the
-same prototype.
+anticipated lifecycle of the prototype in this project, which is expected to be discarded once the (\ac{MVP}) phase
+begins. As the project moves towards the MVP stage, a fresh start will be made, incorporating only validated concepts
+and findings from the experimental prototype. Therefore, evolutionary prototyping is not applicable, as it is primarily
+designed for projects that involve iterative refinement and continuous evolution of the same prototype.
 
 The experimental prototyping approach allows for focused experimentation with various design elements, interface
 interactions, and technical implementations, all within a controlled environment that does not necessitate long-term
