Changed the citation page number range

--- a/kapitel/kapitel_2/kapitel_2.tex
+++ b/kapitel/kapitel_2/kapitel_2.tex
@@ -9,10 +9,10 @@
 
 The prototyping approach developed by Christiane Floyd represents a structured methodology used primarily in software
 development to improve communication between developers and users, reduce misunderstandings, and ultimately enhance the
-quality of the final product.\autocite[cf.][p.2-3]{floydSystematicLookPrototyping1984} This methodology provides an
+quality of the final product.\autocite[cf.][p.2--3]{floydSystematicLookPrototyping1984} This methodology provides an
 alternative to the traditional linear, phase-oriented development process by introducing a dynamic element of iteration
 and feedback.\autocite[cf.][p.3]{floydSystematicLookPrototyping1984} As a result, it facilitates a more
-interactive and user-centered development process.\autocite[cf.][p.3-4]{floydSystematicLookPrototyping1984}
+interactive and user-centered development process.\autocite[cf.][p.3--4]{floydSystematicLookPrototyping1984}
 
 Floyd’s prototyping process is structured as a cyclical sequence of four distinct steps: functional selection,
 construction, evaluation, and further use.\\ The first step, Functional Selection, involves identifying the specific
@@ -29,7 +29,7 @@ for exploring different solutions and gathering feedback.\autocite[cf.][p.4]{flo
 Evaluation, the third step in the process, serves as the cornerstone of the prototyping methodology. In this step,
 feedback from all relevant stakeholders—including potential users—is collected and analyzed to refine and guide
 subsequent development stages. This iterative process ensures that the prototype evolves in alignment with user
-expectations and needs.\autocite[cf.][p.4-5]{floydSystematicLookPrototyping1984}
+expectations and needs.\autocite[cf.][p.4--5]{floydSystematicLookPrototyping1984}
 
 The final step, Further Use, determines the prototype's role after the evaluation phase. Depending on its effectiveness
 and the degree to which it meets requirements, the prototype can be discarded, modified for continued use, or serve as a
@@ -43,18 +43,18 @@ development: exploratory prototyping, experimental prototyping, and evolutionary
 primarily used to clarify requirements and foster creative cooperation between developers and users during the early
 stages of development. It is particularly useful when there is a lack of clarity on the system’s final objectives, as it
 allows for broad experimentation and refinement of ideas before committing to a specific solution.
-\autocite[cf.][p.6-7]{floydSystematicLookPrototyping1984}
+\autocite[cf.][p.6--7]{floydSystematicLookPrototyping1984}
 
 In contrast, Experimental Prototyping focuses on testing proposed solutions to validate specific hypotheses, such as
 user interface design, system performance, or algorithm feasibility. This approach might involve techniques such as full
 functional simulation or human interface simulation to verify that the proposed design meets the intended objectives.
-\autocite[cf.][p.8-10]{floydSystematicLookPrototyping1984}
+\autocite[cf.][p.8--10]{floydSystematicLookPrototyping1984}
 
 Finally, Evolutionary Prototyping treats the prototype as a system that continuously evolves to adapt to changing
 requirements over time. Each version of the prototype serves as a basis for the next iteration, incorporating new
 insights and user feedback. This approach is especially beneficial in scenarios where requirements are expected to
 change frequently, rendering a static set of requirements impractical.
-\autocite[cf.][p.10-12]{floydSystematicLookPrototyping1984}
+\autocite[cf.][p.10--12]{floydSystematicLookPrototyping1984}
 
 To support these prototyping processes, various techniques and tools can be utilized.
 \autocite[cf.][p.12]{floydSystematicLookPrototyping1984} \\Modular Design, for instance, encourages the use of small,
